--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -48,6 +48,18 @@
 </div>
 
 <div class="form-group row">
+  <label for="fechaIngreso" class="col-form-label col-sm-2">Fecha ingreso</label>
+  
+  <div class="col-sm-6">
+      <input matInput [matDatepicker]="picker" class="form-control" name="fechaIngreso" [(ngModel)]="cliente.createAt" style="display: inline; width: 300px;">
+      <mat-hint></mat-hint>
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    
+  </div>
+  </div>
+
+<div class="form-group row">
   <div class="col-sm-6">
     <button class="btn btn-primary" role="button" (click)="create()" *ngIf="!cliente.id else mostrarBtnEditar" [disabled]="!clientesForm.form.valid">Crear Cliente</button>
 
