--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <app-header></app-header>
 
-<div class="container my-3 pb-5">
+<div class="container my-3">
 
 <!-- Directiva de angular que indica donde se van a renderizar las rutas (cada pagina) -->
 <router-outlet></router-outlet>
