--- a/src/app/clientes/form.component.html
+++ b/src/app/clientes/form.component.html
@@ -3,7 +3,7 @@
 </ul>
 
 <div class="card bg-dark text-white">
-  <div class="card-header">{{ titulo }}</div>
+  <div class="card-header"><h3>{{ titulo }}</h3></div>
   <div class="card-body">
 
 <!-- <form (ngSubmit) = "create()"> directiva para hacer submit en formulario -->
@@ -58,6 +58,16 @@
     
   </div>
   </div>
+
+  <div class="form-group row">
+    <label for="email" class="col-form-label col-sm-2">Region</label>
+    
+    <div class="col-sm-6">
+      <select [compareWith]="compararRegion" class="form-select" name="region" [(ngModel)]="cliente.region" style="width: 400px;">
+        <option [ngValue]="region" *ngFor="let region of regiones" >{{region.nombre}}</option>
+      </select>
+    </div>
+    </div>
 
 <div class="form-group row">
   <div class="col-sm-6">
