Se agrega inicio de sesion en el front

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,13 @@
 
 <app-header></app-header>
 
-<div class="container my-3">
+<div id="wrap">
+<div id="main" class="container clear-top">
 
 <!-- Directiva de angular que indica donde se van a renderizar las rutas (cada pagina) -->
 <router-outlet></router-outlet>
 
+</div>
 </div>
 
 <app-footer></app-footer>
