--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark rounded-top text-center">
+<footer class="footer bg-dark rounded-top text-center" id="footer">
   <div class="container py-2">
     <p class="text-white my-2"> &copy; {{author.nombre + ' ' + author.apellido}}</p>
   </div>
