--- a/src/app/clientes/detalle/detalle.component.html
+++ b/src/app/clientes/detalle/detalle.component.html
@@ -43,6 +43,39 @@
                                     style="width: 400px; height: 400px;">
                             </div>
                         </div>
+                        <div class="row" *ngIf="authService.hasRole('ROLE_ADMIN')">
+                            <button type="button" class="btn btn-success" [routerLink]="['/facturas/form/',cliente.id]">Crear Factura</button>
+                        </div>
+                        <div class="row">
+                            <div class="alert alert-info my-4" *ngIf="cliente.facturas.length == 0">
+                                No hay facturas asignadas para el cliente {{cliente.nombre}} {{cliente.apellido}}
+                            </div>
+                            <table class="table table-bodered table-striped my-4" *ngIf="cliente.facturas.length > 0">
+                                <thead>
+                                <tr>
+                                    <th>Folio</th>
+                                    <th>Descripcion</th>
+                                    <th>Fecha</th>
+                                    <th>Total</th>
+                                    <th>Detalle</th>
+                                    <th *ngIf="authService.hasRole('ROLE_ADMIN')">Eliminar</th>
+                                </tr>
+
+                                </thead>
+                                <tbody>
+
+                                    <tr *ngFor="let factura of cliente.facturas">
+                                        <td>{{factura.id}}</td>
+                                        <td>{{factura.descripcion}}</td>
+                                        <td>{{factura.createAt}}</td>
+                                        <td>{{factura.total}}</td>
+                                        <td><button class="btn btn-primary btn-sm" type="button" [routerLink]="['/facturas', factura.id]">Ver</button></td>
+                                        <td *ngIf="authService.hasRole('ROLE_ADMIN')"><button class="btn btn-danger btn-sm" type="button" (click)="delete(factura)">Eliminar</button></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
