--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -31,12 +31,12 @@
       <tbody>
         <tr *ngFor="let item of clientes">
           <td *ngIf="authService.hasRole('ROLE_USER')"><img (click)="abrirModal(item)" *ngIf="item?.foto"
-            src="http://localhost:8080/apiCliente/uploads/img/{{item.foto}}"
+            src="{{urlBackend}}/apiCliente/uploads/img/{{item.foto}}"
             alt="Foto de cliente {{item.nombre}}" class="img-thumbnail rounded"
             style="width: 64px; height: 64px; cursor: pointer; margin-left: 10%;"> <!-- cursor.pointer mostrar la mano en vez de la flecha al pasar por encima -->
 
             <img (click)="abrirModal(item)" *ngIf="!item?.foto"
-            src="http://localhost:8080/images/notUser.png"
+            src="{{urlBackend}}/images/notUser.png"
             alt="Sin foto" class="img-thumbnail rounded"
             style="width: 64px; height: 64px; cursor: pointer; margin-left: 10%;">
           </td>
